# openglfx

./: .gitignore  README.md  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties  maven-publisher.gradle  publish-helper.gradle  secring.gpg  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: compilation.yml  maven_publish.yml  maven_publishing.yml
core/: build.gradle
core/src/main/kotlin/com/husker/openglfx/: FXGLEventListener.kt  FXGLInitializer.kt  OpenGLCanvas.kt
core/src/main/kotlin/com/huskerdev/openglfx/: FXGLEventListener.kt  FXGLInitializer.kt  FXGLTimer.kt  GLCanvasAnimator.kt  (+4 more)
core/src/main/native/linux_utils/: CMakeLists.txt  linux_utils.cpp  linux_utils.h
core/src/main/native/openglfx/: openglfx.cpp  openglfx.h  openglfx.sln  openglfx.vcxproj  openglfx.vcxproj.filters  wgl.h
core/src/main/native/win_utils/: wgl.h  win_utils.cpp  win_utils.h  win_utils.sln  win_utils.vcxproj  win_utils.vcxproj.filters
gradle/: libs.versions.toml
gradle/addons/: kotlin-module-info.gradle  maven-publish.gradle  native-compilation.gradle  property-class.gradle  testing.gradle
jogl/: build.gradle
jogl/src/examples/java/: Interop.java  Shared.java  Universal.java
jogl/src/examples/java/rendering/: ExampleJavaRenderer.java
jogl/src/examples/kotlin/: Direct.kt  ExampleRenderer.kt  Interop.kt  JOGL_D3D.kt  JOGL_ES2.kt  JOGL_SW.kt  Shared.kt  Universal.kt
jogl/src/examples/kotlin/rendering/: ExampleRenderer.kt
lwjgl/: build.gradle
lwjgl/src/examples/java/: Interop.java  Shared.java  Universal.java
lwjgl/src/examples/java/rendering/: ExampleJavaRenderer.java
lwjgl/src/examples/kotlin/: Direct.kt  ExampleRenderer.kt  Interop.kt  LWJGL.kt  LWJGL_D3D.kt  LWJGL_ES2.kt  LWJGL_SW.kt  Learn Opengl - Hello Triangle.kt  Learn Opengl - Textures.kt  Shared.kt  Universal.kt  WhiteNotBlack.kt
lwjgl/src/examples/kotlin/rendering/: ExampleRenderer.kt
lwjgl/src/examples/kotlin/scene/: ExampleScene.kt
lwjgl/src/examples/kotlin/scene/graphics/: Shader.kt
modules/core/: build.gradle  build.gradle.kts
modules/core/canvas_old/: BlitCanvasImpl.kt  IOSurfaceCanvasImpl.kt  NVDXInteropCanvasImpl.kt  SharedCanvasImpl.kt
modules/core/canvas_old/async/: AsyncBlitCanvasImpl.kt  AsyncIOSurfaceCanvasImpl.kt  AsyncNVDXInteropCanvasImpl.kt  AsyncSharedCanvasImpl.kt
modules/core/kotlin/: module-info.java
modules/core/kotlin/com/huskerdev/openglfx/: GLExecutor.kt  GLFXInfo.kt
modules/core/native/: build.gradle  build.gradle.kts
modules/core/native/linux/: openglfx-linux.h  vk-ext-memory.cpp
modules/core/native/macos/: iosurface.cpp  openglfx-macos.h
modules/core/native/shared/: executor.cpp  memory-objects.cpp  openglfx.cpp  openglfx.h  renderdoc.cpp  utils.cpp  vk-ext-memory.cpp
modules/core/native/win/: d3d.cpp  dx9.cpp  dxgi.cpp  dxinterop.cpp  openglfx-windows.h  wgldx.cpp
modules/jme/: build.gradle
modules/jogl/: build.gradle  build.gradle.kts
modules/jogl/kotlin/: module-info.java
modules/libgdx/: build.gradle  build.gradle.kts
modules/libgdx/kotlin/: module-info.java
modules/lwjgl/: build.gradle  build.gradle.kts
modules/lwjgl/kotlin/: module-info.java
modules/lwjgl/src/examples/kotlin/: LWJGL.kt
modules/lwjgl/src/examples/kotlin/scene/: ExampleScene.kt
modules/lwjgl2/: build.gradle  build.gradle.kts
modules/lwjgl2/libs/arm64/: liblwjgl.dylib
modules/lwjgl2/src/examples/kotlin/: LWJGL2.kt
modules/lwjgl2/src/examples/kotlin/scene/: BufferUtils.kt  ExampleScene.kt
modules/native/: CMakeLists.txt  build.gradle
modules/native/src/: d3d.cpp  dxinterop.cpp  iosurface.cpp  openglfx.cpp  openglfx.h
native/: CMakeLists.txt  build.gradle  com_husker_openglfx_utils_NativeWindowUtils.c  com_husker_openglfx_utils_NativeWindowUtils.h  dxinterop.cpp  openglfx.cpp  openglfx.h  renderdoc.cpp
native/src/: dxinterop.cpp  openglfx.cpp  openglfx.h  renderdoc.cpp
pages/: empty.md  matan.md  notes.md  posts.md  profile.md  projects.md  tools.md
pages/notes/: aig.md  matan.md  proga.md
pages/posts/: 1.md
pages/profile/: books.md  games.md  music.md  videos.md
pages/projects/: launcher.md  minui.md  nioex.md  openglfx.md
pages/tools/: openglfx.md  pythagoras.md
panamagl/: build.gradle
plugins/maven/: build.gradle.kts
plugins/moduleInfo/: build.gradle.kts
plugins/native/: build.gradle.kts
plugins/properties/: build.gradle.kts
plugins/utils/: build.gradle.kts
src/main/java/com/husker/joglfx/: NewtCanvasJFX.java  NodeUtils.kt  OpenGLCanvas.kt  ScreenUtils.kt
src/main/java/com/husker/openglfx/: FXGLEventListener.kt  OpenGLCanvas.kt
utils/: build.gradle
(+271 files in other folders)
